# molly

./: .gitignore  Cargo.toml  README.md
configs/: config.toml.example
src/: config.rs  lib.rs  main.rs
tests/: cli.rs
