[package]
name = "molly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rumqttc = "0.23.0"
tokio = { version = "1.36", features = ["rt", "macros", "io-util", "net", "time"] }
log = "0.4.20"
env_logger = "0.11.2"
toml = "0.8.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
assert_fs = "1.1.1"


